shorten name, as Debian-8.0 is prepended automatically

--- a/debian-8.2-minimal-64/dab.conf
+++ b/debian-8.2-minimal-64/dab.conf
@@ -4,7 +4,7 @@ CacheDir: ../cache
 #Source: http://ftp.debian.org/debian SUITE-updates main contrib
 #Source: http://security.debian.org SUITE/updates main contrib 
 Architecture: amd64
-Name: debian-8.2-minimal
+Name: minimal
 Version: 8.2-1
 Section: system
 Maintainer: Christian Wagner <chriswayg@gmail.com>
